research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__bigger_infrastructure_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infrastructure
snapshot_kind: text
---
switch-1:
  name: ~
  count: 1
  links: ~
  dependencies: ~
  properties: ~
  description: ~
switch-2:
  name: ~
  count: 2
  links:
    - switch-1
  dependencies: ~
  properties: ~
  description: ~
ubuntu-10:
  name: ~
  count: 1
  links:
    - switch-1
  dependencies:
    - windows-10
    - windows-10-vuln-1
  properties: ~
  description: ~
windows-10:
  name: ~
  count: 3
  links: ~
  dependencies: ~
  properties: ~
  description: ~
windows-10-vuln-1:
  name: ~
  count: 1
  links: ~
  dependencies: ~
  properties: ~
  description: ~
