research/primary/reference-ecosystems/ncr-sdl-parser/sdl-parser/src/snapshots/sdl_parser__infrastructure__tests__infranode_count_longhand_is_parsed.snap
---
source: sdl-parser/src/infrastructure.rs
expression: infra_node
snapshot_kind: text
---
InfraNode {
    name: None,
    count: 23,
    links: None,
    dependencies: None,
    properties: None,
    description: None,
}
